samples/_failures_safe/1761004318_47228b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e165ff4.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_8e165ff4.c:147: error: expected ‘{’ at end of input
